--- a/Express/survey-form/views/result.ejs
+++ b/Express/survey-form/views/result.ejs
@@ -12,5 +12,10 @@
     <h3>Dojo Location: <%= result.location %></h3>
     <h3>Fave Language: <%= result.language %></h3>
     <h3>Comment: <%= result.comment %></h3>
+    <br>
+    <br>
+    <form action="/" method="get">
+        <button>HOME</button>
+    </form>
 </body>
 </html>
