--- a/Express/survey-form/views/index.ejs
+++ b/Express/survey-form/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css">
     <title>DOJO SURVEY</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
             <th>Dojo Location:</th>
             <td>
                 <select name="location">
+                    <option selected="selected">Select</option>
                     <option value="Chicago">Chicago</option>
                     <option value="Tulsa">Tulsa</option>
                     <option value="Seattle">Seattle</option>
@@ -27,6 +29,7 @@
             <th>Favorite Language:</th>
             <td>
                 <select name="language">
+                    <option selected="selected">Select</option>
                     <option value="Javascript">Javascript</option>
                     <option value="Python">Python</option>
                     <option value="C#">C#</option>
