--- a/Express/survey-form-revisited/views/index.ejs
+++ b/Express/survey-form-revisited/views/index.ejs
@@ -14,10 +14,6 @@
 
            var socket  = io.connect();
 
-            // $('form#surveyform').submit(function(){
-            //     socket.emit("posting_form", {data: {name: $("input[name='name']").val(), location: $("input[name='location']").val(), language: $("input[name='language']").val(), comment: $("input[name='comment']").val()}
-            // });
-
            $( 'form#surveyform').submit(function (){
                socket.emit( "posting_form", $(this).serializeArray());
                return false;
@@ -25,7 +21,7 @@
 
            socket.on( 'updated_msg', function (data){
                let jsonresult = JSON.stringify(data);
-               $("div#result").append("Your Information emitted by the server is: " + jsonresult);
+               $("div#result").append("Your Information emitted by the server is: " + data);
             });
 
             socket.on('random', function (data){
@@ -36,11 +32,11 @@
 </head>
 <body>
     <div id="result">
-        <!-- RESULTS WILL GO HERE -->
+        <!-- FORM RESULTS WILL GO HERE -->
     </div>
     <br>
     <div id="results">
-            <!-- RESULTS WILL GO HERE -->
+            <!-- RANDOM NUMBER RESULTS WILL GO HERE -->
     </div>
     <br>
     <form method="post" id="surveyform">
