--- a/Express/epic-button-game/views/index.ejs
+++ b/Express/epic-button-game/views/index.ejs
@@ -32,6 +32,7 @@
    </script>
 </head>
 <body>
+    <!-- THERE IS STILL A PROBLEM WITH REFRESHING. FIX! -->
     <h1 id="title">The button has been pushed <span id="count"></span> time(s)!</h1>
     <button id="btn">PUSH THE EPIC BUTTON</button>
     <button id="resetbtn">RESET COUNT</button>
