--- a/Express/epic-button-game/views/index.ejs
+++ b/Express/epic-button-game/views/index.ejs
@@ -13,7 +13,7 @@
     <script>
 
         $(document). ready(function (){
-            $("span#count").html(0)
+            // $("span#count").html(0)
 
             var socket = io.connect();
 
