--- a/Express/group-chat/views/index.ejs
+++ b/Express/group-chat/views/index.ejs
@@ -27,6 +27,9 @@
         <input type="text" id="message" placeholder="Enter your message!" class="row col-md-6">
         <button id="send" class="row col-md-6 btn">SEND</button>
     </div>
+    <div id="activeusers">
+
+    </div>
 
     <script src="/chat.js"></script>
 
