--- a/MongoDB/cat-dashboard/views/onecat.ejs
+++ b/MongoDB/cat-dashboard/views/onecat.ejs
@@ -19,6 +19,7 @@
         <li>Personality: <h5><%= cat.personality %></h5></li>
     </ul>
     <hr>
-    <a href="/editcat/<%= cat._id %>"><button class="btn btn-info">EDIT CAT</button></a>    
+    <a href="/editcat/<%= cat._id %>"><button class="btn btn-info">EDIT CAT</button></a>
+    <a href="/deletecat/<%= cat._id %>"><button class="btn btn-info">DELETE CAT</button></a>    
 </body>
 </html>
