--- a/MongoDB/login-registration/views/index.ejs
+++ b/MongoDB/login-registration/views/index.ejs
@@ -24,15 +24,15 @@
         <label>Confirm Password:</label>
         <input type="password" name="confirm_pw" class="form-control">
         <br>
-        <button class="btn btn-info form-control">REGISTER</button>
+        <button type="submit" class="btn btn-info form-control">REGISTER</button>
     </form>
     <hr>
     <h1>LOGIN:</h1>
     <form action="/loginuser" method="post">
         <label>Email:</label>
-        <input type="text" name="email" class="form-control">
+        <input type="email" name="loginemail" class="form-control">
         <label>Password:</label>
-        <input type="text" name="password" class="form-control">
+        <input type="password" name="loginpassword" class="form-control">
         <br>
         <button class="btn btn-info form-control">LOG IN</button>
     </form>
