--- a/MongoDB/login-registration/views/success.ejs
+++ b/MongoDB/login-registration/views/success.ejs
@@ -9,7 +9,7 @@
     <title>Login/Registration</title>
 </head>
 <body class="container">
-    <h1>WELCOME, <%=  %>!</h1>
+    <h1>WELCOME, <%= user.first_name %>!</h1>
     <hr>
     <h2 class="success">SUCCESS! SUCCESS!</h2>
     <hr>
