--- a/MongoDB/login-registration/views/index.ejs
+++ b/MongoDB/login-registration/views/index.ejs
@@ -18,7 +18,7 @@
         <label>Birthday:</label>
         <input type="date" name="birthday" class="form-control">
         <label>Email:</label>
-        <input type="email" name="email" class="form-control">
+        <input type="text" name="email" class="form-control">
         <label>Password:</label>
         <input type="password" name="password" class="form-control">
         <label>Confirm Password:</label>
@@ -30,7 +30,7 @@
     <h1>LOGIN:</h1>
     <form action="/loginuser" method="post">
         <label>Email:</label>
-        <input type="email" name="loginemail" class="form-control">
+        <input type="text" name="loginemail" class="form-control">
         <label>Password:</label>
         <input type="password" name="loginpassword" class="form-control">
         <br>
