--- a/Angular/practice/events-angular/src/app/app.component.html
+++ b/Angular/practice/events-angular/src/app/app.component.html
@@ -1,16 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<button (click)="onButtonClick()" >Click me!</button>
+<button (click)="onButtonClick()" >Click ONE</button>
 <!-- RESULT IN CONSOLE: -->
 <!-- Click event is working -->
 
-<button (click)="onButtonClickParam(5)">Click me!</button>
+<button (click)="onButtonClickParam(5)">Click TWO</button>
 <!-- RESULT IN CONSOLE: -->
 <!-- Click event is working with num param: 5 -->
 
-<button (click)="onButtonClickParams(5, 'hello')">Click me!</button>
+<button (click)="onButtonClickParams(5, 'hello')">Click THREE</button>
 <!-- RESULT IN CONSOLE: -->
 <!-- Click event is working with num param: 5 and str param: hello -->
 
-<button (click)="onButtonClickEvent($event)">Click me!</button>
+<button (click)="onButtonClickEvent($event)">Click FOUR</button>
 <!-- RESULT IN CONSOLE: -->
 <!-- Click event is working with event:  MouseEvent {isTrusted: true, screenX: 2625, screenY: 139, clientX: 254, clientY: 25, …} -->
