--- a/Angular/garbage/restful-tasks-cont/angular/src/app/app.component.html
+++ b/Angular/garbage/restful-tasks-cont/angular/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div>
   <h1>RESTFUL TASKS API</h1>
   <h2>ALL THE TASKS:</h2>
-    <h3 *ngFor="let task of tasks | slice:0:3;"><li>{{task.title}} - {{task.description}}</li></h3>
+    <h3 *ngFor="let task of tasks"><li>{{task.title}} - {{task.description}}</li></h3>
   <hr>
   <h2>THE THIRD TASK:</h2>
     <h3 *ngFor="let task of tasks | slice:2:3;"><li>{{task.title}} - {{task.description}}</li></h3>
