--- a/Angular/weather-api/angular-weather/src/app/seattle/seattle.component.html
+++ b/Angular/weather-api/angular-weather/src/app/seattle/seattle.component.html
@@ -1,11 +1,11 @@
-<h1>CHICAGO, IL</h1>
+<h1>SEATTLE, WA</h1>
 <div id="info">
 	<h3>Humidity: {{ weatherData.humidity }}%</h3>
 	<h3>Temperature(Average): {{ weatherData.temp }}&#8457;</h3>
-	<h3>Temperature(Low): {{ weatherData.temp_min }}&#8457;</h3>
+	<h3>Temperature(Low): {{ weatherData.temp_min}}&#8457;</h3>
 	<h3>Temperature(High): {{ weatherData.temp_max }}&#8457;</h3>
 	<h3>Status: {{ weatherData.description }}</h3>
 </div>
 <div id="image">
-	<img src="https://d35frdwcqpifcr.cloudfront.net/sites/default/files/thumbnail/chicago-600x600.jpg">
+	<img src="https://keystonestrategy.com/wp-content/uploads/2016/07/seattle.jpg">
 </div>
