--- a/Angular/weather-api/angular-weather/src/app/washington/washington.component.html
+++ b/Angular/weather-api/angular-weather/src/app/washington/washington.component.html
@@ -1,4 +1,4 @@
-<h1>CHICAGO, IL</h1>
+<h1>BELLEVUE, WA</h1>
 <div id="info">
 	<h3>Humidity: {{ weatherData.humidity }}%</h3>
 	<h3>Temperature(Average): {{ weatherData.temp }}&#8457;</h3>
@@ -7,5 +7,5 @@
 	<h3>Status: {{ weatherData.description }}</h3>
 </div>
 <div id="image">
-	<img src="https://d35frdwcqpifcr.cloudfront.net/sites/default/files/thumbnail/chicago-600x600.jpg">
+	<img src="https://igx.4sqi.net/img/general/600x600/2630044_7ITLMys7SQm2Q9ge4n9FsDuZy3Ltt0LKXl0OZcEwVZk.jpg">
 </div>
