--- a/Angular/weather-api/angular-weather/src/app/dallas/dallas.component.html
+++ b/Angular/weather-api/angular-weather/src/app/dallas/dallas.component.html
@@ -1,4 +1,4 @@
-<h1>CHICAGO, IL</h1>
+<h1>DALLAS, TX</h1>
 <div id="info">
 	<h3>Humidity: {{ weatherData.humidity }}%</h3>
 	<h3>Temperature(Average): {{ weatherData.temp }}&#8457;</h3>
@@ -7,5 +7,5 @@
 	<h3>Status: {{ weatherData.description }}</h3>
 </div>
 <div id="image">
-	<img src="https://d35frdwcqpifcr.cloudfront.net/sites/default/files/thumbnail/chicago-600x600.jpg">
+	<img src="https://storage.googleapis.com/rm-wp-production//2016/08/dallas-600x600.jpg">
 </div>
