--- a/Angular/weather-api/angular-weather/src/app/sanjose/sanjose.component.html
+++ b/Angular/weather-api/angular-weather/src/app/sanjose/sanjose.component.html
@@ -1,4 +1,4 @@
-<h1>CHICAGO, IL</h1>
+<h1>SAN JOSE, CA</h1>
 <div id="info">
 	<h3>Humidity: {{ weatherData.humidity }}%</h3>
 	<h3>Temperature(Average): {{ weatherData.temp }}&#8457;</h3>
@@ -7,5 +7,5 @@
 	<h3>Status: {{ weatherData.description }}</h3>
 </div>
 <div id="image">
-	<img src="https://d35frdwcqpifcr.cloudfront.net/sites/default/files/thumbnail/chicago-600x600.jpg">
+	<img src="https://peiwc-test1445460803.netdna-ssl.com/wp-content/uploads/2016/02/sandiego.1024-600x600.png">
 </div>
