--- a/Angular/authors/angular-authors/src/app/app.component.html
+++ b/Angular/authors/angular-authors/src/app/app.component.html
@@ -3,6 +3,7 @@
   <h1>FAVORITE AUTHORS</h1>
   <button [routerLink]="['home']" class="btn">HOME</button>
   <button [routerLink]="['add']" class="btn">ADD AUTHOR</button>
+  <button [routerLink]="['allquotes']" class="btn">ALL QUOTES</button>
 </div>
 <div style="text-align:center">
   <router-outlet></router-outlet>
