--- a/Angular/authors/angular-authors/src/styles.css
+++ b/Angular/authors/angular-authors/src/styles.css
@@ -3,8 +3,11 @@ button {
     background-color: pink;
     margin: 5px;
 }
-table.table.table-striped td 
-{
+table.table.table-striped td {
+    text-align:center; 
+    vertical-align:middle;
+}
+table.table.table-striped th {
     text-align:center; 
     vertical-align:middle;
 }
