--- a/Angular/authors/angular-authors/src/app/allquotes/allquotes.component.html
+++ b/Angular/authors/angular-authors/src/app/allquotes/allquotes.component.html
@@ -1,6 +1,6 @@
 <hr>  
 <h2>LIST OF ALL THE QUOTES</h2>
-<table class="table table-striped">
+<table class="table table-striped text-center">
   <thead>
     <tr>
       <th>AUTHOR</th>
