--- a/Angular/authors/angular-authors/src/app/home/home.component.html
+++ b/Angular/authors/angular-authors/src/app/home/home.component.html
@@ -14,7 +14,7 @@
         <button [routerLink]="['/addq', author._id]" value="{{ author._id }}" class="btn">ADD QUOTES</button>
         <button [routerLink]="['/quotes', author._id]" value="{{ author._id }}" class="btn">VIEW QUOTES</button>
         <button [routerLink]="['/edit', author._id]" value="{{ author._id }}" class="btn">EDIT AUTHOR</button>
-        <button (click)='deleteAuthor(author._id)' class="btn">DELETE AUTHOR</button>
+        <button (click)='deleteAuthor(author._id)' class="btn alert-danger">DELETE AUTHOR</button>
       </td>
     </tr>
   </tbody>
