--- a/Angular/product-manager/angular-product/src/app/add/add.component.html
+++ b/Angular/product-manager/angular-product/src/app/add/add.component.html
@@ -1,6 +1,7 @@
 <hr>
-<h2>ADD S NEW PRODUCT</h2>
-<form #productForm="ngModel" (submit)="createProduct()">
+<h2>ADD A NEW PRODUCT</h2>
+<form (submit)="addProduct()">
+  <!-- ERROR COMES UP WHEN USING #productForm="ngModel" ON FORM TAG -->
   <input 
   type="text"
   name="title"
@@ -12,6 +13,13 @@
   [(ngModel)]="newProduct.title"
   #title="ngModel"
   />
+  <div *ngIf="!title.valid">
+    <p *ngIf="title.errors.required" class="error">Product Title is required.</p>
+    <p *ngIf="title.errors.minlength" class="error">Product Title must be at least 3 characters.</p>
+  </div>
+  <div *ngIf="title.valid">
+    <p class="success">Nice! You're good to go!</p>
+  </div>
   <input 
   type="number"
   name="price"
@@ -22,15 +30,23 @@
   [(ngModel)]="newProduct.price"
   #price="ngModel"
   />
+  <div *ngIf="!price.valid">
+    <p *ngIf="price.errors.required" class="error">Product Price is required.</p>
+  </div>
+  <div *ngIf="price.valid">
+    <p class="success">Nice! You're good to go!</p>
+  </div>
   <input 
   type="text"
   name="url"
   class="form-control"
   placeholder="PRODUCT URL"
-  required
   minlength="3"
   [(ngModel)]="newProduct.url"
   #url="ngModel"
   />
-  <button [disabled]="!userForm.valid" type="submit" class="form-control">SUBMIT</button>
+  <div *ngIf="url.valid">
+    <p class="success">Nice! You're good to go!</p>
+  </div>
+  <button type="submit" class="btn form-control">SUBMIT</button>
 </form>
