--- a/Angular/product-manager/angular-product/src/app/add/add.component.html
+++ b/Angular/product-manager/angular-product/src/app/add/add.component.html
@@ -1,7 +1,6 @@
 <hr>
 <h2>ADD A NEW PRODUCT</h2>
-<form (submit)="addProduct()">
-  <!-- ERROR COMES UP WHEN USING #productForm="ngModel" ON FORM TAG -->
+<form (submit)="addProduct()" #productForm="ngForm">
   <input 
   type="text"
   name="title"
@@ -10,31 +9,38 @@
   required
   minlength="3"
   maxlength="50"
+  pattern="^[a-zA-Z]+(([\'\,\.\-][a-zA-Z])?[a-zA-Z]*)*$"
   [(ngModel)]="newProduct.title"
   #title="ngModel"
   />
   <div *ngIf="!title.valid">
     <p *ngIf="title.errors.required" class="error">Product Title is required.</p>
     <p *ngIf="title.errors.minlength" class="error">Product Title must be at least 3 characters.</p>
+    <p *ngIf="title.errors.pattern" class="error">Product Title cannot contain any numbers or special characters.</p> 
   </div>
   <div *ngIf="title.valid">
     <p class="success">Nice! You're good to go!</p>
   </div>
   <input 
-  type="number"
+  type="text"
   name="price"
   class="form-control"
   placeholder="PRODUCT PRICE"
   required
   min="1"
+  pattern="^[0-9]+$"
   [(ngModel)]="newProduct.price"
   #price="ngModel"
   />
   <div *ngIf="!price.valid">
     <p *ngIf="price.errors.required" class="error">Product Price is required.</p>
+    <p *ngIf="price.errors.pattern" class="error">Product Price cannot contain any letters.</p>
   </div>
-  <div *ngIf="price.valid">
-    <p class="success">Nice! You're good to go!</p>
+  <div *ngIf="price.value > 0">
+    <p class="success">Nice! You're good to go!</p> 
+  </div>
+  <div *ngIf="price.value <= 0">
+    <p class="error">Product Price is too low!</p>
   </div>
   <input 
   type="text"
@@ -48,5 +54,5 @@
   <div *ngIf="url.valid">
     <p class="success">Nice! You're good to go!</p>
   </div>
-  <button type="submit" class="btn form-control">SUBMIT</button>
+  <button type="submit" class="btn form-control" [disabled]="!productForm.valid">SUBMIT</button>
 </form>
